added jwt auth
