# models/users.go
@@ -2,9 +2,14 @@ package models
 
 import (
 	"context"
+	"strings"
 )
 
 type UserPassword struct {
+	Password string `json:"password" binding:"required"`
+}
+type UserCredentials struct {
+	Username string `json:"username" binding:"required"`
 	Password string `json:"password" binding:"required"`
 }
 type User struct {
@@ -16,6 +21,9 @@ type User struct {
 	PhoneNumber string `json:"phone_number" binding:"required"`
 	BaseModelAudit
 	BaseModelSoftDelete
+
+	//	relations
+	Auth *Auth `bun:"rel:has-one,join:id=user_id"`
 }
 type Users []User
 
@@ -27,7 +35,10 @@ func (u *User) Create(c context.Context) error {
 }
 
 func (u *Users) GetAll(c context.Context) error {
-	return db.NewSelect().Model(u).Scan(c)
+	if err := db.NewSelect().Model(u).Scan(c); err != nil {
+		return err
+	}
+	return nil
 }
 
 func (u *User) GetById(c context.Context) error {
@@ -46,4 +57,12 @@ func (u *User) Delete(c context.Context) error {
 		return err
 	}
 	return nil
+}
+
+func (u *User) GetByUsername(c context.Context) error {
+	return db.NewSelect().
+		Model(u).
+		Relation("Auth").
+		Where("username = ?", strings.ToLower(u.Username)).
+		Scan(c)
 }
